whitespace fix

--- a/style/main.css
+++ b/style/main.css
@@ -7,10 +7,13 @@
 @import "lib/footer.css";
 body {
   font-family: sans-serif;
-  margin: 0px;
+ 
     color: #333;
     font-size: 19px;
       overflow-x: hidden;
+}
+body, html{
+     margin: 0px;
 }
 header, #Home #Events, #History, #Register{
   overflow: hidden;
